<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_wifi_security"
        android:icon="@drawable/ic_menu_wifi"
        android:title="@string/menu_wifi_short" />
    <item
        android:id="@+id/nav_vpn"
        android:icon="@drawable/ic_menu_vpn"
        android:title="@string/menu_vpn" />
    <item
        android:id="@+id/nav_apps"
        android:icon="@drawable/ic_menu_apps"
        android:title="@string/menu_apps" />
    <item
        android:id="@+id/nav_chat"
        android:icon="@drawable/baseline_chat_24"
        android:title="@string/menu_ai_short" />
</menu>
