<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.resistine.android.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vpn"
        android:name="com.resistine.android.ui.vpn.VpnFragment"
        android:label="@string/menu_vpn"
        tools:layout="@layout/fragment_vpn" />

    <fragment
        android:id="@+id/nav_apps"
        android:name="com.resistine.android.ui.apps.AppsFragment"
        android:label="@string/menu_apps"
        tools:layout="@layout/fragment_apps" />
</navigation>
