<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@color/rs_surface"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingStart="@dimen/rs_space_24"
    android:paddingTop="@dimen/rs_space_20"
    android:paddingEnd="@dimen/rs_space_24"
    android:paddingBottom="@dimen/rs_space_16">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:contentDescription="@string/resistine_logo_description"
        android:src="@drawable/resistine_shield" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.Resistine.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rs_space_12"
        android:text="@string/app_name" />

    <TextView
        style="@style/TextAppearance.Resistine.Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/rs_space_2"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp" />
</LinearLayout>
